--- a/src/assets/layout.css
+++ b/src/assets/layout.css
@@ -10,11 +10,11 @@
   color: @primary-color;
 } */
 
-/* .logo {
+.logo {
   height: 32px;
   background: rgba(255, 255, 255, 0.2);
   margin: 16px;
-} */
+}
 
 .layout-header {
   background: #fff;
