[refactor] Add a completed list instead of one list holding all todos

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -68,6 +68,11 @@ h2 {
   min-height: calc(100vh - 140px);
 }
 
+.input-section {
+  display: flex;
+  flex-direction: row;
+}
+
 .SectionA img-container {
   display: flex;
 }
